All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [2.4.0] - Unreleased
### Removed
- [FILES] Obsolete files (owned and used on vulture-base)
- [HAPROXY] [CONFIG] Obsolete Frontend defender policy SPOE
### Added
- [HAPROXY] [CONFIG] Added Redis main node proxying
### Changed
- [IDP] [API] Return a generic 400 when the requested portal/repo/user doesn't exist
- [HAPROXY] [TESTS] Improve validation tests by using a mock global file
- [PORTAL] [SESSION_VALIDATION] Complete rework of session validation and simplification of underlying code
- [PORTAL] [CONFIG] Improve URL rewriting logic on authenticated workflows when user is not connected


## [2.3.0] - 2023-02-02
### Fixed
- [HAPROXY] [PORTAL] redirect request to portal whenever authentication validation couldn't be done
- [IDP] [API] Correct return code 400 when User without TOTP has a request for TOTP reset
- [SYSTEM] [BLACKLIST/WHITELIST] Reload pf configuration when adding/removing whitelist/blacklist IPs to cluster 
- [API_PARSER] [CLOUDFLARE] Fix ram explosion + improve resilience by downloading by bulks
- [API_PARSER] [AKAMAI] Fix HBSD13 SemLock error when loading GUI code
### Added
- [IDP] [API] When locking/unlocking a user, also disable/enable its access tokens
- [API_PARSER] [WAF_CLOUD_PTORECTOR] New API parser WAF Cloud Protector
### Changed
- [HAPROXY] [PORTAL] Deny requests with Authorization header, instead of redirecting them to the portal


## [2.2.4] - 2023-01-18
### Fixed
- [API_PARSER] [IMPERVA] Prevent downloading same files
- [CRONTABS] [SECURITY_UPDATE] Script could fail to save new Geolite MMDBs due to filename inconsistency in DB
### Changed
- [RSYSLOG] [PSTATS-SEC] Disable rsyslog stat generation every second
- [API_PARSER] [AKAMAI] Improve parser's performances